--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gerador de Senhas</title>
         <link rel="stylesheet" href="style.css">
+        <title>Gerador de senha</title>
     </head>
     <body>
-        
-    <script src="script.js"></script>
+        <img class="logo" src="./img/logo.png">
+
+        <main class="container-input">
+            <span>Tamanho: <span id="valor"></span> caracteres</span>
+            <input id="slider" type="range"class="slider" min="5" max="30" value="15">
+            <button onclick="generatePassword()" id="button" class="button-cta">Gerar Senha</button>
+        </main>
+        <div id="container-password" onclick="copyPassword()" class="container-password hide">
+            <span class="title">Sua senha gerada foi:</span>
+            <span id="password" class="password"></span>
+            <span class="tooltip">Clique na senha para copiar.</span>
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
